c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/arguments_in_registers/parameter_shadows_function.c
int a(void) {
    return 1;
}

int b(int a) {
    return a;
}

int main(void) {
    return a() + b(2);
}